<resources>
    <string name="app_name">Addition</string>
    <string name="app">Addition of numbers</string>
    <string name="no1">Enter the first number</string>
    <string name="no2">Enter the second number</string>
    <string name="no3">Enter the third number</string>
    <string name="no4">Enter the fourth number</string>
    <string name="no5">Enter the fifth number</string>
    <string name="calc">Calculate</string>
    <string name="output">Result will be displayed here...</string>
</resources>
