<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.addition.MainActivity"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:inputType="number"
        android:labelFor="@+id/editText1" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:labelFor="@+id/editText2"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignStart="@+id/editText3" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/editText4"
        android:ems="10"
        android:inputType="number"
        android:labelFor="@+id/editText3" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:inputType="number"
        android:labelFor="@+id/editText4" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:inputType="number"
        android:labelFor="@+id/editText5" />

    <TextView
        android:id="@+id/textViewmain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/no1"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="63dp"
        android:layout_below="@+id/textViewmain"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/no2"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="63dp"
        android:layout_below="@+id/textView1"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no3"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="63dp"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no4"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="63dp"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no5"
        tools:layout_editor_absoluteY="63dp"
        tools:layout_editor_absoluteX="-2dp"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc"
        android:onClick="onClick"
        android:layout_below="@+id/editText1"
        android:layout_toEndOf="@+id/textView4"
        android:layout_marginTop="63dp" />

    <TextView
        android:id="@+id/textViewresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp" />

</RelativeLayout>
